// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Ticket /> it renders powerball numbers 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: center;
  width: 100%;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
}

.c3 {
  position: relative;
  color: #6C4796;
  font-weight: 700;
  background: #ffffff;
  padding: 10px;
  width: 10%;
  height: 10%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: all 400ms ease-in border:1px solid #cdcdcd;
  transition: all 400ms ease-in border:1px solid #cdcdcd;
  margin: 0 -1px -1px 0;
}

.c3 > span {
  z-index: 5;
}

.c3 > svg {
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: auto;
  width: 75%;
  height: 75%;
  position: absolute;
  fill: white;
}

.c4 {
  position: relative;
  color: #6C4796;
  font-weight: 700;
  background: #e9e4f1;
  padding: 10px;
  width: 10%;
  height: 10%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: all 400ms ease-in border:1px solid #cdcdcd;
  transition: all 400ms ease-in border:1px solid #cdcdcd;
  margin: 0 -1px -1px 0;
}

.c4 > span {
  z-index: 5;
}

.c4 > svg {
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: auto;
  width: 75%;
  height: 75%;
  position: absolute;
  fill: white;
}

.c1 {
  width: 98%;
  font-weight: 700;
  font-size: 10px;
  padding: 5px 0;
  background-color: #879bab;
  color: #ffffff;
  text-transform: uppercase;
  margin-top: 1px;
}

<div
  className="c0"
>
  <div
    className="c1"
    data-cy="powerball-label"
  >
    Select your powerball
  </div>
  <div
    className="c2"
  >
    <div
      className="c3"
      data-cy="box__powerball"
      selected={false}
    >
      <span>
        1
      </span>
    </div>
    <div
      className="c4"
      data-cy="box__selected__powerball"
      selected={true}
    >
      <svg
        height="100%"
        id="cross-icon"
        viewBox="0 0 24 24"
        width="100%"
        xmlns="http://www.w3.org/2000/svg"
        xmlnsXlink="http://www.w3.org/1999/xlink"
      >
        <path
          d="M24 20.188l-8.315-8.209 8.2-8.282-3.697-3.697-8.212 8.318-8.31-8.203-3.666 3.666 8.321 8.24-8.206 8.313 3.666 3.666 8.237-8.318 8.285 8.203z"
          fill="#d6cde4"
        />
      </svg>
      <span>
        2
      </span>
    </div>
    <div
      className="c3"
      data-cy="box__powerball"
      selected={false}
    >
      <span>
        3
      </span>
    </div>
    <div
      className="c3"
      data-cy="box__powerball"
      selected={false}
    >
      <span>
        4
      </span>
    </div>
    <div
      className="c3"
      data-cy="box__powerball"
      selected={false}
    >
      <span>
        5
      </span>
    </div>
    <div
      className="c3"
      data-cy="box__powerball"
      selected={false}
    >
      <span>
        6
      </span>
    </div>
    <div
      className="c3"
      data-cy="box__powerball"
      selected={false}
    >
      <span>
        7
      </span>
    </div>
    <div
      className="c3"
      data-cy="box__powerball"
      selected={false}
    >
      <span>
        8
      </span>
    </div>
    <div
      className="c3"
      data-cy="box__powerball"
      selected={false}
    >
      <span>
        9
      </span>
    </div>
    <div
      className="c3"
      data-cy="box__powerball"
      selected={false}
    >
      <span>
        10
      </span>
    </div>
    <div
      className="c3"
      data-cy="box__powerball"
      selected={false}
    >
      <span>
        11
      </span>
    </div>
    <div
      className="c3"
      data-cy="box__powerball"
      selected={false}
    >
      <span>
        12
      </span>
    </div>
    <div
      className="c3"
      data-cy="box__powerball"
      selected={false}
    >
      <span>
        13
      </span>
    </div>
    <div
      className="c3"
      data-cy="box__powerball"
      selected={false}
    >
      <span>
        14
      </span>
    </div>
    <div
      className="c3"
      data-cy="box__powerball"
      selected={false}
    >
      <span>
        15
      </span>
    </div>
    <div
      className="c3"
      data-cy="box__powerball"
      selected={false}
    >
      <span>
        16
      </span>
    </div>
    <div
      className="c3"
      data-cy="box__powerball"
      selected={false}
    >
      <span>
        17
      </span>
    </div>
    <div
      className="c3"
      data-cy="box__powerball"
      selected={false}
    >
      <span>
        18
      </span>
    </div>
    <div
      className="c3"
      data-cy="box__powerball"
      selected={false}
    >
      <span>
        19
      </span>
    </div>
    <div
      className="c3"
      data-cy="box__powerball"
      selected={false}
    >
      <span>
        20
      </span>
    </div>
  </div>
</div>
`;

exports[`<Ticket /> it renders primary numbers 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: center;
  width: 100%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
}

.c2 {
  position: relative;
  color: #6C4796;
  font-weight: 700;
  background: #ffffff;
  padding: 10px;
  width: 10%;
  height: 10%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: all 400ms ease-in border:1px solid #cdcdcd;
  transition: all 400ms ease-in border:1px solid #cdcdcd;
  margin: 0 -1px -1px 0;
}

.c2 > span {
  z-index: 5;
}

.c2 > svg {
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: auto;
  width: 75%;
  height: 75%;
  position: absolute;
  fill: white;
}

.c3 {
  position: relative;
  color: #6C4796;
  font-weight: 700;
  background: #e9e4f1;
  padding: 10px;
  width: 10%;
  height: 10%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: all 400ms ease-in border:1px solid #cdcdcd;
  transition: all 400ms ease-in border:1px solid #cdcdcd;
  margin: 0 -1px -1px 0;
}

.c3 > span {
  z-index: 5;
}

.c3 > svg {
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: auto;
  width: 75%;
  height: 75%;
  position: absolute;
  fill: white;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
      data-cy="box"
      selected={false}
    >
      <span>
        1
      </span>
    </div>
    <div
      className="c3"
      data-cy="box__selected"
      selected={true}
    >
      <svg
        height="100%"
        id="cross-icon"
        viewBox="0 0 24 24"
        width="100%"
        xmlns="http://www.w3.org/2000/svg"
        xmlnsXlink="http://www.w3.org/1999/xlink"
      >
        <path
          d="M24 20.188l-8.315-8.209 8.2-8.282-3.697-3.697-8.212 8.318-8.31-8.203-3.666 3.666 8.321 8.24-8.206 8.313 3.666 3.666 8.237-8.318 8.285 8.203z"
          fill="#d6cde4"
        />
      </svg>
      <span>
        2
      </span>
    </div>
    <div
      className="c3"
      data-cy="box__selected"
      selected={true}
    >
      <svg
        height="100%"
        id="cross-icon"
        viewBox="0 0 24 24"
        width="100%"
        xmlns="http://www.w3.org/2000/svg"
        xmlnsXlink="http://www.w3.org/1999/xlink"
      >
        <path
          d="M24 20.188l-8.315-8.209 8.2-8.282-3.697-3.697-8.212 8.318-8.31-8.203-3.666 3.666 8.321 8.24-8.206 8.313 3.666 3.666 8.237-8.318 8.285 8.203z"
          fill="#d6cde4"
        />
      </svg>
      <span>
        3
      </span>
    </div>
    <div
      className="c2"
      data-cy="box"
      selected={false}
    >
      <span>
        4
      </span>
    </div>
    <div
      className="c2"
      data-cy="box"
      selected={false}
    >
      <span>
        5
      </span>
    </div>
    <div
      className="c2"
      data-cy="box"
      selected={false}
    >
      <span>
        6
      </span>
    </div>
    <div
      className="c2"
      data-cy="box"
      selected={false}
    >
      <span>
        7
      </span>
    </div>
    <div
      className="c2"
      data-cy="box"
      selected={false}
    >
      <span>
        8
      </span>
    </div>
    <div
      className="c2"
      data-cy="box"
      selected={false}
    >
      <span>
        9
      </span>
    </div>
    <div
      className="c3"
      data-cy="box__selected"
      selected={true}
    >
      <svg
        height="100%"
        id="cross-icon"
        viewBox="0 0 24 24"
        width="100%"
        xmlns="http://www.w3.org/2000/svg"
        xmlnsXlink="http://www.w3.org/1999/xlink"
      >
        <path
          d="M24 20.188l-8.315-8.209 8.2-8.282-3.697-3.697-8.212 8.318-8.31-8.203-3.666 3.666 8.321 8.24-8.206 8.313 3.666 3.666 8.237-8.318 8.285 8.203z"
          fill="#d6cde4"
        />
      </svg>
      <span>
        10
      </span>
    </div>
    <div
      className="c2"
      data-cy="box"
      selected={false}
    >
      <span>
        11
      </span>
    </div>
    <div
      className="c2"
      data-cy="box"
      selected={false}
    >
      <span>
        12
      </span>
    </div>
    <div
      className="c2"
      data-cy="box"
      selected={false}
    >
      <span>
        13
      </span>
    </div>
    <div
      className="c2"
      data-cy="box"
      selected={false}
    >
      <span>
        14
      </span>
    </div>
    <div
      className="c3"
      data-cy="box__selected"
      selected={true}
    >
      <svg
        height="100%"
        id="cross-icon"
        viewBox="0 0 24 24"
        width="100%"
        xmlns="http://www.w3.org/2000/svg"
        xmlnsXlink="http://www.w3.org/1999/xlink"
      >
        <path
          d="M24 20.188l-8.315-8.209 8.2-8.282-3.697-3.697-8.212 8.318-8.31-8.203-3.666 3.666 8.321 8.24-8.206 8.313 3.666 3.666 8.237-8.318 8.285 8.203z"
          fill="#d6cde4"
        />
      </svg>
      <span>
        15
      </span>
    </div>
    <div
      className="c2"
      data-cy="box"
      selected={false}
    >
      <span>
        16
      </span>
    </div>
    <div
      className="c2"
      data-cy="box"
      selected={false}
    >
      <span>
        17
      </span>
    </div>
    <div
      className="c2"
      data-cy="box"
      selected={false}
    >
      <span>
        18
      </span>
    </div>
    <div
      className="c2"
      data-cy="box"
      selected={false}
    >
      <span>
        19
      </span>
    </div>
    <div
      className="c3"
      data-cy="box__selected"
      selected={true}
    >
      <svg
        height="100%"
        id="cross-icon"
        viewBox="0 0 24 24"
        width="100%"
        xmlns="http://www.w3.org/2000/svg"
        xmlnsXlink="http://www.w3.org/1999/xlink"
      >
        <path
          d="M24 20.188l-8.315-8.209 8.2-8.282-3.697-3.697-8.212 8.318-8.31-8.203-3.666 3.666 8.321 8.24-8.206 8.313 3.666 3.666 8.237-8.318 8.285 8.203z"
          fill="#d6cde4"
        />
      </svg>
      <span>
        20
      </span>
    </div>
    <div
      className="c2"
      data-cy="box"
      selected={false}
    >
      <span>
        21
      </span>
    </div>
    <div
      className="c2"
      data-cy="box"
      selected={false}
    >
      <span>
        22
      </span>
    </div>
    <div
      className="c2"
      data-cy="box"
      selected={false}
    >
      <span>
        23
      </span>
    </div>
    <div
      className="c2"
      data-cy="box"
      selected={false}
    >
      <span>
        24
      </span>
    </div>
    <div
      className="c2"
      data-cy="box"
      selected={false}
    >
      <span>
        25
      </span>
    </div>
    <div
      className="c2"
      data-cy="box"
      selected={false}
    >
      <span>
        26
      </span>
    </div>
    <div
      className="c2"
      data-cy="box"
      selected={false}
    >
      <span>
        27
      </span>
    </div>
    <div
      className="c2"
      data-cy="box"
      selected={false}
    >
      <span>
        28
      </span>
    </div>
    <div
      className="c2"
      data-cy="box"
      selected={false}
    >
      <span>
        29
      </span>
    </div>
    <div
      className="c2"
      data-cy="box"
      selected={false}
    >
      <span>
        30
      </span>
    </div>
    <div
      className="c3"
      data-cy="box__selected"
      selected={true}
    >
      <svg
        height="100%"
        id="cross-icon"
        viewBox="0 0 24 24"
        width="100%"
        xmlns="http://www.w3.org/2000/svg"
        xmlnsXlink="http://www.w3.org/1999/xlink"
      >
        <path
          d="M24 20.188l-8.315-8.209 8.2-8.282-3.697-3.697-8.212 8.318-8.31-8.203-3.666 3.666 8.321 8.24-8.206 8.313 3.666 3.666 8.237-8.318 8.285 8.203z"
          fill="#d6cde4"
        />
      </svg>
      <span>
        31
      </span>
    </div>
    <div
      className="c2"
      data-cy="box"
      selected={false}
    >
      <span>
        32
      </span>
    </div>
    <div
      className="c2"
      data-cy="box"
      selected={false}
    >
      <span>
        33
      </span>
    </div>
    <div
      className="c2"
      data-cy="box"
      selected={false}
    >
      <span>
        34
      </span>
    </div>
    <div
      className="c3"
      data-cy="box__selected"
      selected={true}
    >
      <svg
        height="100%"
        id="cross-icon"
        viewBox="0 0 24 24"
        width="100%"
        xmlns="http://www.w3.org/2000/svg"
        xmlnsXlink="http://www.w3.org/1999/xlink"
      >
        <path
          d="M24 20.188l-8.315-8.209 8.2-8.282-3.697-3.697-8.212 8.318-8.31-8.203-3.666 3.666 8.321 8.24-8.206 8.313 3.666 3.666 8.237-8.318 8.285 8.203z"
          fill="#d6cde4"
        />
      </svg>
      <span>
        35
      </span>
    </div>
  </div>
</div>
`;
